[package]
name = "egui-bind"
version = "0.5.0"
edition = "2021"
description = "Library for showing keybinds"
license = "MIT"
authors = ["ItsEthra"]
repository = "https://github.com/ItsEthra/egui-bind"

[features]
serde = ["dep:serde", "egui/serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
egui = "0.20"

[dev-dependencies]
eframe = "0.20"
